# PreeceMeet

./: .gitignore  PreeceMeet.sln  README.md  install-linux.sh
.github/workflows/: build-api.yml  build-app.yml  build-client.yml  build-tauri.yml  build.yml
PreeceMeet/: App.xaml  App.xaml.cs  PreeceMeet.csproj
PreeceMeet.AuthApi/: Dockerfile  PreeceMeet.AuthApi.csproj  Program.cs  appsettings.Development.json
PreeceMeet.AuthApi/Data/: AppDbContext.cs
PreeceMeet.AuthApi/Hubs/: CallHub.cs
PreeceMeet.AuthApi/Models/: DeviceToken.cs  TempTokenEntry.cs  User.cs
PreeceMeet.AuthApi/Properties/: launchSettings.json
PreeceMeet.AuthApi/Services/: ApnsPushService.cs  LiveKitTokenService.cs  PresenceService.cs  SessionTokenService.cs  TempTokenStore.cs
PreeceMeet.Client/: App.xaml  App.xaml.cs  PreeceMeet.Client.csproj
PreeceMeet.Client/Controls/: ChannelSidebarControl.xaml  ChannelSidebarControl.xaml.cs  StatsTileControl.xaml  StatsTileControl.xaml.cs  (+3 more)
PreeceMeet.Electron/: main.js  package.json  preload.js
PreeceMeet.Tauri/: index.html  latest.json  package-lock.json  package.json  vite.config.ts
PreeceMeet.Tauri/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
PreeceMeet.Tauri/src-tauri/capabilities/: default.json
PreeceMeet.Tauri/src-tauri/src/: lib.rs  main.rs
app/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
app/src/: App.tsx  (+11 more)
design-briefs/: PreeceMeet-Client-Layout-Brief.md
flatpak/: com.russellpreece.PreeceMeet.yaml
mobile/: App.tsx  ExportOptions.plist  app.json  index.ts  package-lock.json  package.json
(+102 files in other folders)
